# fx-fitness-search

./: .gitignore  Cargo.toml  DEPLOYMENT.md  PLAN.md  README.md  index.html  install-server-node.sh
.github/workflows/: publish-data.yml  release-migrate.yml
book/: chapter-1.html  chapter_1.md
book/notes/: chapter_1.md
data/: average_fitness_by_generation_2025-12-06T15_09_17.586384524Z.csv  request_convergence_by_generation_2026-01-15T07_27_21.9770471Z.csv
db/: README.md  docker-compose.yml  postgres.conf
db/docker-entrypoint-initdb.d/: 01-metabase.sh
docker/: butane_conf.yaml  docker-compose.yaml  postgres.Dockerfile
docs/: BACKENDS.md
examples/: beijing_training_request.json  beijing_training_request_new.json  invoke_beijing_binary.rs
scripts/: download-client.sh  download-server.sh  run-migrate.sh
src/: backend.rs  batcher.rs  client.rs  config.rs  dataset.rs  inference.rs  lib.rs  main.rs  train.rs
src/book/: chapters.rs  charts.rs  mod.rs
src/core/: batcher.rs  dataset.rs  inference.rs  ingestion.rs  interpolation.rs  mod.rs  model.rs  preprocessor.rs  protocol.rs  train.rs  train_config.rs
src/core/ingestion/: extract.rs  file_csv.rs  mod.rs  sequence.rs
src/core/preprocessing/: cos.rs  ema.rs  mod.rs  node.rs  roc.rs  sin.rs  std.rs  zscore.rs
src/evaluators/: mod.rs
src/optimizations/: feng.rs  mod.rs
src/optimizations/beijing_air_quality/: batcher.rs  cast.rs  commands.rs  commands_old.rs  dataset.rs  evaluator.rs  infer_dataset.rs  inference.rs  ingestion.rs  mod.rs  parse.rs  parser.rs  phenotype.rs  preprocessor.rs  protocol.rs  train.rs  train_config.rs
templates/: index.html
templates/chapters/: chapter_1.html
templates/charts/: line.html
