[package]
name = "fx-durable-ga-app"
version = "0.1.0"
edition = "2024"

[features]
default = ["backend-wgpu"]
backend-ndarray = ["burn-ndarray", "burn/ndarray", "burn/train"]
backend-wgpu = ["burn-wgpu", "burn/wgpu", "burn/train"]

[dependencies]
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "macros",
    "full",
    "tracing",
    "process"
] }
tokio-util = { version = "0.7.16", features = ["rt"] }
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate"
] }
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
fx-durable-ga = "0.10.0"
fx-mq-jobs = "0.1.8"
fx-event-bus = "0.1.7"
num_cpus = "1.17.0"
futures = "0.3.31"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0.12"
const-fnv1a-hash = "1.1"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
uuid = { version = "1.14.0", features = ["serde", "v7"] }
csv = "1.3"
burn = { version = "0.20.0-pre.1", default-features = false }
burn-ndarray = { version = "0.20.0-pre.1", optional = true }
burn-wgpu = { version = "0.20.0-pre.1", optional = true }
approx = "0.5.1"
chrono = "0.4.9"
latlon = "0.1.3"
geo = "0.31.0"
askama = "0.12.1"

[dev-dependencies]
burn-ndarray = "0.20.0-pre.1"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "render"
path = "src/bin/render.rs"

[[bin]]
name = "beijing"
path = "src/optimizations/beijing_air_quality/bin/main.rs"
